tests/e2e/gateway-externalhazelcast/00-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssg-hazelcast-test
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      affinity: {}
      containers:
      - envFrom:
        - configMapRef:
            name: ssg-hazelcast-test
        - secretRef:
            name: ssg-hazelcast-test
        image: docker.io/caapim/gateway:11.2.1
        imagePullPolicy: IfNotPresent
        lifecycle: {}
        name: gateway
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 9443
          name: management
          protocol: TCP
        resources: {}
        securityContext: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/license/license.xml
          name: gateway-license
          subPath: license.xml
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/assertions/ExternalHazelcastSharedStateProviderAssertion/hazelcast-client.xml
          name: hazelcast-client
          subPath: hazelcast-client.xml
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/ssg-hazelcast-test-listen-port-bundle
          name: ssg-hazelcast-test-listen-port-bundle
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/graphman/0
          name: ssg-hazelcast-test-repository-bundle-dest
        - mountPath: /graphman/config.json
          name: ssg-hazelcast-test-repository-init-config
          subPath: config.json         
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gateway-license
        secret:
          defaultMode: 493
          items:
          - key: license.xml
            path: license.xml
          optional: false
          secretName: gateway-license
      - configMap:
          defaultMode: 420
          items:
          - key: hazelcast-client.xml
            path: hazelcast-client.xml
          name: ssg-hazelcast-test-gateway-files
        name: hazelcast-client
      - configMap:
          defaultMode: 493
          name: ssg-hazelcast-test-listen-port-bundle
          optional: false
        name: ssg-hazelcast-test-listen-port-bundle
      - emptyDir: {}
        name: ssg-hazelcast-test-repository-bundle-dest
      - configMap:
          defaultMode: 493
          name: ssg-hazelcast-test-repository-init-config
          optional: false
        name: ssg-hazelcast-test-repository-init-config
